--- a/index.html
+++ b/index.html
@@ -3,23 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Anshul Mahajan — 3D Product Video Specialist & Motion Designer">
-    <title>Anshul Mahajan | Portfolio</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Anshul Mahajan - 3D Product Video Specialist</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <div class="header-content">
-            <h1>Anshul Mahajan</h1>
-            <p>3D Product Video Specialist | Motion Designer</p>
-            <nav>
-                <a href="#about">About</a>
-                <a href="#portfolio">Portfolio</a>
-                <a href="#resume">Resume</a>
-                <a href="#contact">Contact</a>
-            </nav>
-        </div>
+        <nav>
+            <div class="container">
+                <h1><a href="#">Anshul Mahajan</a></h1>
+                <ul>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#latest-project">Latest Project</a></li>
+                    <li><a href="#about">About Me</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
     </header>
+
+    <section id="portfolio">
+        <div class="container">
+            <h2>Portfolio</h2>
+            <div class="portfolio-grid">
+                <!-- Project 1 -->
+                <div class="project">
+                    <img src="Pebble_Neo.jpg" alt="Pebble Neo">
+                    <h3><a href="https://www.behance.net/gallery/220961207/Pebble-Neo-Redefining-Everyday-Elegance">Pebble Neo</a></h3>
+                </div>
+                <!-- Project 2 -->
+                <div class="project">
+                    <img src="Lava_O3.gif" alt="Lava O3">
+                    <h3><a href="https://www.behance.net/gallery/221737249/Lava-O3-Redefining-Performance-and-Style">Lava O3</a></h3>
+                </div>
+                <!-- Project 3 -->
+                <div class="project">
+                    <img src="Casio.png" alt="Casio">
+                    <h3><a href="https://www.behance.net/gallery/210212511/Casio">Casio</a></h3>
+                </div>
+                <!-- Project 4 -->
+                <div class="project">
+                    <img src="Lava_Prowatch.jpg" alt="Lava Prowatch">
+                    <h3><a href="https://www.behance.net/gallery/217335825/Lava-Prowatch-X">Lava Prowatch</a></h3>
+                </div>
+                <!-- Project 5 -->
+                <div class="project">
+                    <img src="ProBuds.jpg" alt="Lava ProBuds">
+                    <h3><a href="https://www.behance.net/gallery/201361809/Lava-ProBuds">Lava ProBuds</a></h3>
+                </div>
+                <!-- Project 6 -->
+                <div class="project">
+                    <img src="Vast.png" alt="Vast">
+                    <h3><a href="https://www.behance.net/gallery/197347117/VAST-Journey-to-the-Cosmos">Vast</a></h3>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="latest-project">
+        <div class="container">
+            <h2>Latest Project</h2>
+            <div class="vimeo-video">
+                <iframe src="https://player.vimeo.com/video/1067041442?h=18282ec84f&amp;title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; picture-in-picture" style="width: 100%; height: 500px;" sandbox="allow-same-origin allow-scripts allow-pointer-lock allow-forms allow-popups"></iframe>
+            </div>
+        </div>
+    </section>
 
     <section id="about">
         <div class="container">
@@ -33,76 +82,26 @@
             <p>
                 With a dedication to pushing creative boundaries, I bring complex concepts to life through engaging visual narratives.
             </p>
-        </div>
-    </section>
-
-    <section id="portfolio">
-        <h2>Portfolio</h2>
-        <div class="portfolio">
-            <!-- Project 1 -->
-            <div class="project-card">
-                <img src="Pebble_Neo.gif" alt="Pebble Neo" />
-                <h3>Pebble Neo</h3>
-                <a href="https://www.behance.net/gallery/220961207/Pebble-Neo-Redefining-Everyday-Elegance" target="_blank">View Project</a>
-            </div>
-
-            <!-- Project 2 -->
-            <div class="project-card">
-                <img src="Lava_O3.gif" alt="Lava O3" />
-                <h3>Lava O3</h3>
-                <a href="https://www.behance.net/gallery/221737249/Lava-O3-Redefining-Performance-and-Style" target="_blank">View Project</a>
-            </div>
-
-            <!-- Project 3 -->
-            <div class="project-card">
-                <img src="Casio.png" alt="Casio" />
-                <h3>Casio</h3>
-                <a href="https://www.behance.net/gallery/210212511/Casio" target="_blank">View Project</a>
-            </div>
-
-            <!-- Project 4 -->
-            <div class="project-card">
-                <img src="Lava_Prowatch.gif" alt="Lava Prowatch" />
-                <h3>Lava Prowatch X</h3>
-                <a href="https://www.behance.net/gallery/217335825/Lava-Prowatch-X" target="_blank">View Project</a>
-            </div>
-
-            <!-- Project 5 -->
-            <div class="project-card">
-                <img src="ProBuds.jpg" alt="Lava ProBuds" />
-                <h3>Lava ProBuds</h3>
-                <a href="https://www.behance.net/gallery/201361809/Lava-ProBuds" target="_blank">View Project</a>
-            </div>
-
-            <!-- Project 6 -->
-            <div class="project-card">
-                <img src="Vast.png" alt="Vast" />
-                <h3>Vast</h3>
-                <a href="https://www.behance.net/gallery/197347117/VAST-Journey-to-the-Cosmos" target="_blank">View Project</a>
-            </div>
-        </div>
-    </section>
-
-    <section id="resume">
-        <h2>Resume</h2>
-        <a href="Anshul.pdf" class="download-btn" download>Download My Resume</a>
-    </section>
-
-    <section id="contact">
-        <h2>Contact</h2>
-        <div class="email-layout">
             <p>If you want to work together or have a project in mind, feel free to get in touch.</p>
             <p><a href="mailto:anshulmahajan752@gmail.com">Send me an Email</a></p>
         </div>
-        <p>
-            <a href="https://www.linkedin.com/in/anshul-mahajan-" class="social-link">LinkedIn</a> |
-            <a href="https://www.behance.net/anshul_mahajan" class="social-link">Behance</a> |
-            <a href="https://www.instagram.com/anshul_3d/" class="social-link">Instagram</a>
-        </p>
+    </section>
+
+    <section id="contact">
+        <div class="container">
+            <h2>Contact</h2>
+            <p>Feel free to reach out to me for any project inquiries or collaboration ideas.</p>
+            <div class="social-links">
+                <a href="https://www.linkedin.com/in/anshulmahajan" target="_blank">LinkedIn</a>
+                <a href="mailto:anshulmahajan752@gmail.com">Email</a>
+            </div>
+        </div>
     </section>
 
     <footer>
-        &copy; 2025 Anshul Mahajan. All rights reserved.
+        <div class="container">
+            <p>&copy; 2025 Anshul Mahajan. All rights reserved.</p>
+        </div>
     </footer>
 </body>
 </html>
