--- a/index.html
+++ b/index.html
@@ -3,105 +3,104 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Anshul Mahajan - 3D Product Video Specialist</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <meta name="description" content="Anshul Mahajan — 3D Product Video Specialist & Motion Designer Portfolio">
+    <title>Anshul Mahajan | 3D Product Video Specialist</title>
     <link rel="stylesheet" href="style.css">
+
+    <!-- Unique Professional Font inspired by Awwwards -->
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+
+<header>
+    <div class="nav-container">
         <nav>
-            <div class="container">
-                <h1><a href="#">Anshul Mahajan</a></h1>
-                <ul>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#latest-project">Latest Project</a></li>
-                    <li><a href="#about">About Me</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </div>
+            <ul>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#latest-project">Latest Project</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
         </nav>
-    </header>
+    </div>
+</header>
 
-    <section id="portfolio">
-        <div class="container">
-            <h2>Portfolio</h2>
-            <div class="portfolio-grid">
-                <!-- Project 1 -->
-                <div class="project">
-                    <img src="Pebble_Neo.jpg" alt="Pebble Neo">
-                    <h3><a href="https://www.behance.net/gallery/220961207/Pebble-Neo-Redefining-Everyday-Elegance">Pebble Neo</a></h3>
-                </div>
-                <!-- Project 2 -->
-                <div class="project">
-                    <img src="Lava_O3.gif" alt="Lava O3">
-                    <h3><a href="https://www.behance.net/gallery/221737249/Lava-O3-Redefining-Performance-and-Style">Lava O3</a></h3>
-                </div>
-                <!-- Project 3 -->
-                <div class="project">
-                    <img src="Casio.png" alt="Casio">
-                    <h3><a href="https://www.behance.net/gallery/210212511/Casio">Casio</a></h3>
-                </div>
-                <!-- Project 4 -->
-                <div class="project">
-                    <img src="Lava_Prowatch.jpg" alt="Lava Prowatch">
-                    <h3><a href="https://www.behance.net/gallery/217335825/Lava-Prowatch-X">Lava Prowatch</a></h3>
-                </div>
-                <!-- Project 5 -->
-                <div class="project">
-                    <img src="ProBuds.jpg" alt="Lava ProBuds">
-                    <h3><a href="https://www.behance.net/gallery/201361809/Lava-ProBuds">Lava ProBuds</a></h3>
-                </div>
-                <!-- Project 6 -->
-                <div class="project">
-                    <img src="Vast.png" alt="Vast">
-                    <h3><a href="https://www.behance.net/gallery/197347117/VAST-Journey-to-the-Cosmos">Vast</a></h3>
-                </div>
+<section id="portfolio">
+    <div class="container">
+        <h2>Portfolio Highlights</h2>
+        <div class="projects-grid">
+
+            <div class="project">
+                <img src="images/Pebble_Neo.gif" alt="Pebble Neo">
+                <a href="https://www.behance.net/gallery/220961207/Pebble-Neo-Redefining-Everyday-Elegance" target="_blank">Pebble Neo</a>
             </div>
-        </div>
-    </section>
 
-    <section id="latest-project">
-        <div class="container">
-            <h2>Latest Project</h2>
-            <div class="vimeo-video">
-                <iframe src="https://player.vimeo.com/video/1067041442?h=18282ec84f&amp;title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; picture-in-picture" style="width: 100%; height: 500px;" sandbox="allow-same-origin allow-scripts allow-pointer-lock allow-forms allow-popups"></iframe>
+            <div class="project">
+                <img src="images/Lava_O3.gif" alt="Lava O3">
+                <a href="https://www.behance.net/gallery/221737249/Lava-O3-Redefining-Performance-and-Style" target="_blank">Lava O3</a>
             </div>
-        </div>
-    </section>
 
-    <section id="about">
-        <div class="container">
-            <h2>About Me</h2>
-            <p>
-                I am an experienced 3D Product Video Specialist and Motion Designer with expertise in creating visually stunning, high-impact content. My proficiency spans Blender, Cinema 4D, Unreal Engine, and other leading tools. I specialize in crafting cinematic 3D product advertisements and visual storytelling.
-            </p>
-            <p>
-                As part of Takila Designs, I deliver high-quality, 15–45 second 3D product videos that showcase product features with intricate details, driven by meticulous lighting and realism. My aim is to produce visual content that is not only beautiful but also deeply engaging.
-            </p>
-            <p>
-                With a dedication to pushing creative boundaries, I bring complex concepts to life through engaging visual narratives.
-            </p>
-            <p>If you want to work together or have a project in mind, feel free to get in touch.</p>
-            <p><a href="mailto:anshulmahajan752@gmail.com">Send me an Email</a></p>
-        </div>
-    </section>
-
-    <section id="contact">
-        <div class="container">
-            <h2>Contact</h2>
-            <p>Feel free to reach out to me for any project inquiries or collaboration ideas.</p>
-            <div class="social-links">
-                <a href="https://www.linkedin.com/in/anshulmahajan" target="_blank">LinkedIn</a>
-                <a href="mailto:anshulmahajan752@gmail.com">Email</a>
+            <div class="project">
+                <img src="images/Vast.png" alt="VAST">
+                <a href="https://www.behance.net/gallery/197347117/VAST-Journey-to-the-Cosmos" target="_blank">VAST</a>
             </div>
-        </div>
-    </section>
 
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 Anshul Mahajan. All rights reserved.</p>
+            <div class="project">
+                <img src="images/Casio.png" alt="Casio">
+                <a href="https://www.behance.net/gallery/210212511/Casio" target="_blank">Casio</a>
+            </div>
+
+            <div class="project">
+                <img src="images/Lava_Prowatch.gif" alt="Lava Prowatch X">
+                <a href="https://www.behance.net/gallery/217335825/Lava-Prowatch-X" target="_blank">Lava Prowatch X</a>
+            </div>
+
+            <div class="project">
+                <img src="images/ProBuds.jpg" alt="ProBuds">
+                <a href="https://www.behance.net/gallery/201361809/Lava-ProBuds" target="_blank">ProBuds</a>
+            </div>
+
         </div>
-    </footer>
+    </div>
+</section>
+
+<section id="latest-project">
+    <div class="container">
+        <h2>Latest Project</h2>
+        <div class="video-wrapper">
+            <iframe src="https://player.vimeo.com/video/1067041442?h=18282ec84f&amp;title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0" frameborder="0" allow="autoplay; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <a class="latest-link" href="https://www.behance.net/gallery/221737249/Lava-O3-Redefining-Performance-and-Style" target="_blank">View Full Project on Behance</a>
+    </div>
+</section>
+
+<section id="about">
+    <div class="container">
+        <h2>About Me</h2>
+        <p>
+            I am an experienced 3D Product Video Specialist and Motion Designer with expertise in creating visually stunning, high-impact content. My proficiency spans Blender, Cinema 4D, Unreal Engine, and other leading tools. I specialize in crafting cinematic 3D product advertisements and visual storytelling.
+        </p>
+        <p>
+            As part of Takila Designs, I deliver high-quality, 15–45 second 3D product videos that showcase product features with intricate details, driven by meticulous lighting and realism. My aim is to produce visual content that is not only beautiful but also deeply engaging.
+        </p>
+        <p>
+            With a dedication to pushing creative boundaries, I bring complex concepts to life through engaging visual narratives.
+        </p>
+    </div>
+</section>
+
+<section id="contact">
+    <div class="container">
+        <h2>Let’s Connect</h2>
+        <p>If you want to work together or have a project in mind, feel free to get in touch.</p>
+        <p><a href="mailto:anshulmahajan752@gmail.com">anshulmahajan752@gmail.com</a></p>
+        <div class="social-links">
+            <a href="https://www.linkedin.com/in/anshulmahajan" target="_blank">LinkedIn</a>
+            <a href="https://www.behance.net/anshulmahajan" target="_blank">Behance</a>
+            <a href="https://vimeo.com/anshulmahajan" target="_blank">Vimeo</a>
+        </div>
+    </div>
+</section>
+
 </body>
 </html>
