--- a/index.html
+++ b/index.html
@@ -1,76 +1,85 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Anshul Mahajan — Expert 3D Product Video Specialist & Motion Designer. Creating high-quality product animations and visuals.">
-    <title>Anshul Mahajan — 3D Product Video Specialist</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Anshul Mahajan | 3D Product Video Specialist</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+<header>
+    <div class="container">
+        <div class="logo">Anshul Mahajan</div>
+        <nav>
+            <ul>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#latest">Latest Project</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
 
-    <header>
-        <div class="container">
-            <h1>Anshul Mahajan</h1>
-            <nav>
-                <a href="#portfolio">Portfolio</a>
-                <a href="#latest">Latest Project</a>
-                <a href="#about">About</a>
-                <a href="#contact">Contact</a>
-            </nav>
-        </div>
-    </header>
-
-    <section id="portfolio">
-        <div class="container">
-            <h2>Portfolio Highlights</h2>
-            <div class="project-grid">
-                <div class="project"><img src="Pebble_Neo.gif" alt="Pebble Neo"></div>
-                <div class="project"><img src="Lava_O3.gif" alt="Lava O3"></div>
-                <div class="project"><img src="Casio.png" alt="Casio"></div>
-                <div class="project"><img src="Lava_Prowatch.gif" alt="Lava Prowatch"></div>
-                <div class="project"><img src="ProBuds.jpg" alt="ProBuds"></div>
-                <div class="project"><img src="Vast.png" alt="Vast"></div>
-            </div>
-        </div>
-    </section>
-
-    <section id="latest">
-        <div class="container">
-            <h2>Latest Project</h2>
+<section id="portfolio">
+    <div class="container">
+        <h2>Portfolio</h2>
+        <div class="grid">
+            <a href="https://www.behance.net/gallery/220961207/Pebble-Neo-Redefining-Everyday-Elegance" target="_blank">
+                <img src="Pebble_Neo.gif" alt="Pebble Neo Project">
+            </a>
             <a href="https://www.behance.net/gallery/221737249/Lava-O3-Redefining-Performance-and-Style" target="_blank">
-                <iframe src="https://player.vimeo.com/video/1067041442?h=18282ec84f&title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; picture-in-picture" style="width:100%;height:500px;" sandbox="allow-same-origin allow-scripts allow-pointer-lock allow-forms allow-popups"></iframe>
+                <img src="Lava_O3.gif" alt="Lava O3 Project">
+            </a>
+            <a href="https://www.behance.net/gallery/197347117/VAST-Journey-to-the-Cosmos" target="_blank">
+                <img src="Vast.png" alt="VAST Project">
+            </a>
+            <a href="https://www.behance.net/gallery/210212511/Casio" target="_blank">
+                <img src="Casio.png" alt="Casio Project">
+            </a>
+            <a href="https://www.behance.net/gallery/201361809/Lava-ProBuds" target="_blank">
+                <img src="ProBuds.jpg" alt="ProBuds Project">
+            </a>
+            <a href="https://www.behance.net/gallery/217335825/Lava-Prowatch-X" target="_blank">
+                <img src="Lava_Prowatch.gif" alt="Lava Prowatch Project">
             </a>
         </div>
-    </section>
+    </div>
+</section>
 
-    <section id="about">
-        <div class="container">
-            <h2>About Me</h2>
-            <p>
-                I am an experienced 3D Product Video Specialist and Motion Designer, skilled in creating visually stunning, high-impact content. My expertise spans Blender, Cinema 4D, Unreal Engine, and other top tools.
-            </p>
-            <p>
-                At Takila Designs, I specialize in 15–45 second 3D product ads that showcase features through cinematic lighting and storytelling. My focus is on combining technical precision with creative excellence.
-            </p>
-            <p>
-                If you want to work together or have a project in mind, feel free to <a href="mailto:anshulmahajan752@gmail.com">get in touch</a>.
-            </p>
+<section id="latest">
+    <div class="container">
+        <h2>Latest Project</h2>
+        <div class="video-container">
+            <iframe src="https://player.vimeo.com/video/1067041442?h=18282ec84f&title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; picture-in-picture" allowfullscreen></iframe>
         </div>
-    </section>
+    </div>
+</section>
 
-    <section id="contact">
-        <div class="container">
-            <h2>Contact</h2>
-            <p><a href="mailto:anshulmahajan752@gmail.com">Get in Touch</a></p>
-            <div class="social-links">
-                <a href="https://www.linkedin.com/in/anshulmahajan5" target="_blank">LinkedIn</a>
-                <a href="https://www.behance.net/anshulmahajan5" target="_blank">Behance</a>
-                <a href="https://www.instagram.com/anshul_3d/" target="_blank">Instagram</a>
-            </div>
+<section id="about">
+    <div class="container">
+        <h2>About Me</h2>
+        <p>I am an experienced 3D Product Video Specialist and Motion Designer with expertise in creating visually stunning, high-impact content. My proficiency spans Blender, Cinema 4D, Unreal Engine, and other leading tools. I specialize in crafting cinematic 3D product advertisements and visual storytelling.</p>
+        <p>As part of Takila Designs, I deliver high-quality, 15–45 second 3D product videos that showcase product features with intricate details, driven by meticulous lighting and realism. My aim is to produce visual content that is not only beautiful but also deeply engaging.</p>
+        <p>With a dedication to pushing creative boundaries, I bring complex concepts to life through engaging visual narratives.</p>
+    </div>
+</section>
+
+<section id="contact">
+    <div class="container">
+        <h2>Contact</h2>
+        <p>If you want to work together or have a project in mind, feel free to get in touch.</p>
+        <p><a href="mailto:anshulmahajan752@gmail.com">Send me an Email</a></p>
+        <div class="socials">
+            <a href="https://www.linkedin.com/in/anshulmahajan752" target="_blank">LinkedIn</a>
+            <a href="https://www.behance.net/anshulmahajan5" target="_blank">Behance</a>
+            <a href="https://www.instagram.com/anshul_3d/" target="_blank">Instagram</a>
         </div>
-    </section>
+    </div>
+</section>
 
 </body>
 </html>
