--- a/index.html
+++ b/index.html
@@ -40,6 +40,23 @@
                     <img src="images/Lava_O3.gif" alt="Lava O3">
                     <a href="https://www.behance.net/gallery/221737249/Lava-O3-Redefining-Performance-and-Style" target="_blank">Lava O3</a>
                 </div>
+                <!-- Add the rest of your projects -->
+                <div class="project">
+                    <img src="images/VAST.gif" alt="VAST">
+                    <a href="https://www.behance.net/gallery/197347117/VAST-Journey-to-the-Cosmos" target="_blank">VAST</a>
+                </div>
+                <div class="project">
+                    <img src="images/Casio.gif" alt="Casio">
+                    <a href="https://www.behance.net/gallery/210212511/Casio" target="_blank">Casio</a>
+                </div>
+                <div class="project">
+                    <img src="images/Lava_ProBuds.gif" alt="Lava ProBuds">
+                    <a href="https://www.behance.net/gallery/201361809/Lava-ProBuds" target="_blank">Lava ProBuds</a>
+                </div>
+                <div class="project">
+                    <img src="images/Lava_Prowatch_X.gif" alt="Lava Prowatch X">
+                    <a href="https://www.behance.net/gallery/217335825/Lava-Prowatch-X" target="_blank">Lava Prowatch X</a>
+                </div>
             </div>
         </div>
     </section>
